# pulsar

./: .gitignore  CMakeLists.txt  TODO.md  gringo.sln  setup.bat  win_main.cpp
gringo/: cam_controller.cpp  cam_controller.h  deferred_fs.hlsl  deferred_vs.hlsl  env_map_vs.hlsl  fullscreen_vs.hlsl  g_buffer_pass_fs.hlsl  g_buffer_pass_vs.hlsl  gamma_correction.hlsli  gringo.vcxproj  gringo.vcxproj.filters  grng_asset.h  grng_assets.h  grng_bindable.cpp  grng_bindable.h  grng_bindable_entity.h  grng_bindable_manager.h  grng_bindables.h  grng_buffer_clear_pass.h  grng_buffer_resource.h  grng_camera.cpp  grng_camera.h  grng_camera_data.cpp  grng_camera_def.cpp  grng_camera_deferred_shader.h  grng_camera_get.cpp  grng_camera_manager.h  grng_camera_post_effects_shader.h  grng_camera_update.cpp  grng_component.h  grng_component_manager.h  grng_component_transform.h  grng_components.h  grng_const_buffer.h  grng_const_buffers.h  grng_cubemap.cpp  grng_cubemap.h  grng_cubemap_data.cpp  grng_cubemap_dds.cpp  grng_d3d.cpp  (+212 more)
lib/: CMakeLists.txt  pulsar.h
lib/_gfx/: _gfx.cpp  _gfx.h
lib/bindables/: bindables.h
lib/components/: transform_component.h
lib/config/: cubemaps.h  meshes.h  pulsar_def.h  shaders.h  skybox_materials.h  system.h  textures.h  window.h
lib/containers/: array.h  fixed_vector.h  manager.h  sparse_set.h
lib/dcb/: baked_layout.cpp  baked_layout.h  buffer.cpp  buffer.h  buffer_data.cpp  dcb.h  dcb_baked_layout.h  dcb_buffer.h  dcb_layout.h  dcb_layout_elem.h  dcb_layout_elem_ref.h  dcb_raw_layout.h  dcb_types.h  layout.h  layout_elem.cpp  layout_elem.h  layout_elem_memory.cpp  layout_elem_ref.h  raw_layout.cpp  raw_layout.h  types.h
lib/def/: def_deferred.h  def_materials.h  def_meshes.h  def_misc.h  def_rasterizer_states.h  def_scene.h  def_shaders.h  def_skybox.h  def_system.h  def_window.h
lib/ecs/: ecs.h  ecs_entity_bin_tree_array.h  ecs_registry.h  ecs_types.cpp  ecs_types.h  entity_bin_tree_array.cpp  entity_bin_tree_array.h  registry.h  system.h  types.cpp  types.h
lib/exceptions/: base_exception.cpp  base_exception.h  exceptions.h  gfx_exception.cpp  gfx_exception.h  pulsar_exc.h  rg_exception.cpp  rg_exception.h  win_exception.cpp  win_exception.h
lib/filesystem/: filesystem.h
lib/gfx/: gfx.cpp  gfx.h
lib/gfx_resources/: buffer_resource.cpp  buffer_resource.h  cbuffer.h  cubemap.cpp  cubemap.h  depth_stencil_state.cpp  depth_stencil_state.h  depth_stencil_view.cpp  depth_stencil_view.h  dynamic_cbuffer.cpp  dynamic_cbuffer.h  frag_cbuffer.h  frag_dynamic_cbuffer.cpp  frag_dynamic_cbuffer.h  frag_shader.cpp  frag_shader.h  framebuffer.cpp  framebuffer.h  geom_cbuffer.h  geom_dynamic_cbuffer.cpp  geom_dynamic_cbuffer.h  geom_shader.cpp  geom_shader.h  gfx_resources.h  index_buffer.cpp  index_buffer.h  input_layout.cpp  input_layout.h  rasterizer_state.cpp  rasterizer_state.h  render_texture.cpp  render_texture.h  sampler.cpp  sampler.h  shader.cpp  shader.h  shader_texture.cpp  shader_texture.h  sync_resource.cpp  sync_resource.h  (+14 more)
lib/input/: pulsar_input.cpp  pulsar_input.h  pulsar_input_keyboard.cpp  pulsar_input_mouse.cpp  pulsar_keycodes.h  pulsar_mousecodes.h
lib/render_graph/: async_input.h  async_source.h  bindable_input.h  bindable_source.h  buffer_input.h  buffer_source.h  input.cpp  input.h  pass.cpp  pass.h  render_graph.cpp  render_graph.h  rg_const.h  source.cpp  source.h  sync_input.h  sync_source.h
lib/render_queue/: job.cpp  job.h  render_queue.cpp  render_queue.h  types.h
lib/rg/: bindable_input.h  bindable_source.h  buffer_input.h  buffer_source.h  input.h  pass.cpp  pass.h  render_graph.cpp  render_graph.h  rg_const.h  source.h
lib/utils/: math.cpp  math.h  pulsar_math.cpp  pulsar_math.h  pulsar_utils.cpp  pulsar_utils.h  shader_include.cpp  shader_include.h  singleton.h  utils.cpp  utils.h
lib/window/: window.cpp  window.h  window_cursor.cpp  window_data.cpp  window_draw.cpp  window_misc.cpp  window_proc.cpp  window_update.cpp
renderer/: CMakeLists.txt  pulsar.h
renderer/_gfx/: _gfx.cpp  _gfx.h
renderer/components/: components.h
renderer/config/: camera.h  config.h  cubemap.h  material.h  mesh.h  misc.h  pulsar.h  pulsar_config.h  rasterizer_state.h  render_graph.h  shader.h  shader_texture.h  skybox.h  window.h
renderer/deferred_buffer/: deferred_buffer.h  deferred_buffer_get.cpp
renderer/managers/: bindable_manager.h  component_manager.h  entity_manager.h  light_manager.h  rg_component_manager.h  scene_manager.h  win_manager.h
renderer/mask/: mask.h
renderer/misc/: shadow_filter.cpp  shadow_filter.h
renderer/node/: node.cpp  node.h
renderer/passes/: clear_buffer_pass.cpp  clear_buffer_pass.h  clear_buffers_pass.cpp  clear_buffers_pass.h  deferred_pass.cpp  deferred_pass.h  fullscreen_pass.h  g_buffer_pass.cpp  g_buffer_pass.h  post_effects_pass.cpp  post_effects_pass.h  present_pass.cpp  present_pass.h  render_queue_pass.h  shadow_mapping_pass.cpp  shadow_mapping_pass.h  skybox_pass.cpp  skybox_pass.h
renderer/pulsar_render_graph/: deferred_render_graph.cpp  deferred_render_graph.h  pulsar_render_graph.cpp  pulsar_render_graph.h
renderer/render_graph/: pulsar_render_graph.cpp  pulsar_render_graph.h  rg.h
renderer/renderer/: renderer.cpp  renderer.h
renderer/rq/: shadows_job.cpp  shadows_job.h  shadows_rq.h  viewport_job.cpp  viewport_job.h  viewport_rq.h
renderer/scene/: scene.cpp  scene.h  scene_draw.cpp  scene_light.cpp  scene_node.cpp  scene_skybox.cpp
renderer/scripts/: camera_controller.cpp  camera_controller.h  node_rotation.cpp  node_rotation.h  node_rotation_orbit.cpp  node_rotation_orbit.h
renderer/systems/: camera_system.cpp  camera_system.h  light_system.cpp  light_system.h  render_system.cpp  render_system.h  script_system.cpp  script_system.h  viewport_render_system.cpp  viewport_render_system.h
shaders/: CMakeLists.txt
(+394 files in other folders)
